Banner breder gemaakt, opzet slide show en top bar wit en doorzichting gemaakt

--- a/index.html
+++ b/index.html
@@ -33,5 +33,14 @@
             <li><a href="#">AboutUs</a></li>
         </ul>
     </div>
+    <main class="main">
+        <div class="gallery">
+            <div class="frame">
+                <button class="btn frame-prev">Vorige</button>
+               <img class="image" width="600px" height="600px">
+                <button class="btn frame-next">Volgende</button>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
