--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
                 <li><a href="#">Life Arts Atelier</a></li>
             </ul>
         </div>
-        <div class="titles">
-            <h1 class="title">Life Arts</h1>
-            <h3 class="subtitle">Arts of Being You</h3>
+        <div class="title-with-btns">
+            <button class="prev-button">Vorige</button>
+            <div class="titles">
+                <h1 class="title">Life Arts</h1>
+                <h3 class="subtitle">Arts of Being You</h3>
+             </div>
+            <button class="next-button">Volgende</button>
         </div>
     </div>
     <div class="navbar">
@@ -33,14 +37,6 @@
             <li><a href="#">AboutUs</a></li>
         </ul>
     </div>
-    <main class="main">
-        <div class="gallery">
-            <div class="frame">
-                <button class="btn frame-prev">Vorige</button>
-               <img class="image" width="600px" height="600px">
-                <button class="btn frame-next">Volgende</button>
-            </div>
-        </div>
-    </main>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
