--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
             <li><a href="#">AboutUs</a></li>
         </ul>
     </div>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/dist/app.js"></script>
 </body>
 </html>
